--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-flask
-pyTelegramBotAPI
-tensorflow
-scikit-learn
+Flask==2.1.2
+python-telegram-bot==13.15
 numpy
 pandas
+scikit-learn
+tensorflow
